安卓播放模块

--- a/src/ListenTogetherMauiBlazor/wwwroot/index.html
+++ b/src/ListenTogetherMauiBlazor/wwwroot/index.html
@@ -26,6 +26,7 @@
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/Sve.Blazor.InfiniteScroll/js/Observer.js"></script>
+    <script src="_content/ListenTogether.Pages/js/playing.js"></script>
 </body>
 
 </html>
