又是一堆美化和小功能迁移

--- a/src/ListenTogetherMauiBlazor/wwwroot/index.html
+++ b/src/ListenTogetherMauiBlazor/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="ListenTogetherMauiBlazor.styles.css" rel="stylesheet" />
     <link href="_content/ListenTogether.Pages/fontawesome-free-6.4.0-web/css/all.min.css" rel="stylesheet" />
+    <link href="_content/ListenTogether.Pages/css/dialog.css" rel="stylesheet" />
 </head>
 
 <body>
